5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4009/executions/1590_1017.log
== TEST (2019-04-01 13:28:56) 
-- CODE:
from math import*
t1=float(input())#latitude1
g1=float(input())#longitude1
t2=float(input())#latitude2
g2=float(input())#longitude2
R=6371.01
d=R.acos(sin(t1).sin(t2)+cos(t1).cos(t2).cos(g1−g2))
print(radians(round(d,2)))

-- ERROR:
File "XXXX", line 7
    d=R.acos(sin(t1).sin(t2)+cos(t1).cos(t2).cos(g1−g2))
                                                     ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:29:25) 
-- CODE:
from math import*
t1=float(input())#latitude1
g1=float(input())#longitude1
t2=float(input())#latitude2
g2=float(input())#longitude2
R=6371.01
d=R.acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1−g2))
print(radians(round(d,2)))

-- ERROR:
File "XXXX", line 7
    d=R.acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1−g2))
                                                     ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:48:19) 
-- CODE:
from math import*
t1=float(input())#latitude1
g1=float(input())#longitude1
t2=float(input())#latitude2
g2=float(input())#longitude2
R=6371.01
d=R.acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1−g2))
print(radians(round(d,2)))

-- ERROR:
File "XXXX", line 7
    d=R.acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1−g2))
                                                     ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:48:37) 
-- CODE:
from math import*
t1=float(input())#latitude1
g1=float(input())#longitude1
t2=float(input())#latitude2
g2=float(input())#longitude2
R=6371.01
d=R.acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1−g2))
print(radians(round(d,2)))

-- ERROR:
File "XXXX", line 7
    d=R.acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1−g2))
                                                     ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:48:48) 
-- CODE:
from math import*
t1=float(input())#latitude1
g1=float(input())#longitude1
t2=float(input())#latitude2
g2=float(input())#longitude2
R=6371.01
d=R.acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1−g2))
print(radians(round(d,2)))

-- ERROR:
File "XXXX", line 7
    d=R.acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1−g2))
                                                     ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:51:13) 
-- CODE:
from math import*
t1=float(input())#latitude1
g1=float(input())#longitude1
t2=float(input())#latitude2
g2=float(input())#longitude2
R=6371.01
d=R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(radians(round(d,2)))

-- OUTPUT:
50.34402227377644
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 13:51:17) 
-- CODE:
from math import*
t1=float(input())#latitude1
g1=float(input())#longitude1
t2=float(input())#latitude2
g2=float(input())#longitude2
R=6371.01
d=R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(radians(round(d,2)))

-- EXECUTION TIME:
0.15087
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
50.34402227377644
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 13:51:21) 
-- CODE:
from math import*
t1=float(input())#latitude1
g1=float(input())#longitude1
t2=float(input())#latitude2
g2=float(input())#longitude2
R=6371.01
d=R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(radians(round(d,2)))

-- EXECUTION TIME:
0.232771
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
50.34402227377644
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:51:27) 
-- CODE:
from math import*
t1=float(input())#latitude1
g1=float(input())#longitude1
t2=float(input())#latitude2
g2=float(input())#longitude2
R=6371.01
d=R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(radians(round(d,2)))

-- OUTPUT:
50.34402227377644
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 13:51:42) 
-- CODE:
from math import*
t1=float(input())#latitude1
g1=float(input())#longitude1
t2=float(input())#latitude2
g2=float(input())#longitude2
R=6371.01
d=R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(radians(round(d,2)))

-- EXECUTION TIME:
0.16522
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
50.34402227377644
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:51:56) 
-- CODE:
from math import*
t1=float(input())#latitude1
g1=float(input())#longitude1
t2=float(input())#latitude2
g2=float(input())#longitude2
R=6371.01
d=r*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(radians(round(d,2)))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    d=r*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
NameError: name 'r' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:52:33) 
-- CODE:
from math import*
t1=float(input())#latitude1
g1=float(input())#longitude1
t2=float(input())#latitude2
g2=float(input())#longitude2
R=6371.01
d=6371.01*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(radians(round(d,2)))

-- OUTPUT:
50.34402227377644
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 13:52:35) 
-- CODE:
from math import*
t1=float(input())#latitude1
g1=float(input())#longitude1
t2=float(input())#latitude2
g2=float(input())#longitude2
R=6371.01
d=6371.01*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(radians(round(d,2)))

-- EXECUTION TIME:
0.188487
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
50.34402227377644
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:52:40) 
-- CODE:
from math import*
t1=float(input())#latitude1
g1=float(input())#longitude1
t2=float(input())#latitude2
g2=float(input())#longitude2
d=6371.01*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(radians(round(d,2)))

-- OUTPUT:
50.34402227377644
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 13:52:41) 
-- CODE:
from math import*
t1=float(input())#latitude1
g1=float(input())#longitude1
t2=float(input())#latitude2
g2=float(input())#longitude2
d=6371.01*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(radians(round(d,2)))

-- EXECUTION TIME:
0.155641
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
50.34402227377644
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 13:53:22) 
-- CODE:
from math import*
t1=float(input())#latitude1
g1=float(input())#longitude1
t2=float(input())#latitude2
g2=float(input())#longitude2
R=6371.01
d=6371.01*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(radians(round(d,2)))

-- EXECUTION TIME:
0.300391
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
50.34402227377644
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:53:23) 
-- CODE:
from math import*
t1=float(input())#latitude1
g1=float(input())#longitude1
t2=float(input())#latitude2
g2=float(input())#longitude2
R=6371.01
d=6371.01*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(radians(round(d,2)))

-- OUTPUT:
50.34402227377644
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 13:49:57) 
-- CODE:
from math import*
t1=radians(input())
g1=radians(input())
t2=radians(input())
g2=radians
R=6371.01
d=6371.01*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(radians(round(d,2)))

-- EXECUTION TIME:
0.150504
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1017/main.py", line 2, in <module>
    t1=radians(input())
TypeError: a float is required

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 13:50:13) 
-- CODE:
from math import*
t1=radians(input())
g1=radians(input())
t2=radians(input())
g2=radians
R=6371.01
d=6371.01*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(radians(round(d,2)))

-- EXECUTION TIME:
0.133121
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1017/main.py", line 2, in <module>
    t1=radians(input())
TypeError: a float is required

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 13:50:15) 
-- CODE:
from math import*
t1=radians(input())
g1=radians(input())
t2=radians(input())
g2=radians
R=6371.01
d=6371.01*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(radians(round(d,2)))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    t1=radians(input())
TypeError: must be real number, not str
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 13:50:24) 
-- CODE:
from math import*
t1=radians(input())
g1=radians(input())
t2=radians(input())
g2=radians
R=6371.01
d=6371.01*arcos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(radians(round(d,2)))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    t1=radians(input())
TypeError: must be real number, not str
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 13:50:25) 
-- CODE:
from math import*
t1=radians(input())
g1=radians(input())
t2=radians(input())
g2=radians
R=6371.01
d=6371.01*arcos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(radians(round(d,2)))

-- EXECUTION TIME:
0.200869
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1017/main.py", line 2, in <module>
    t1=radians(input())
TypeError: a float is required

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 13:51:04) 
-- CODE:
from math import*
t1=radians(input())
g1=radians(input())
t2=radians(input())
g2=radians
R=6371.01
d=6371.01*arcos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(radians(round(d,2)))

-- EXECUTION TIME:
0.167606
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1017/main.py", line 2, in <module>
    t1=radians(input())
TypeError: a float is required

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 13:51:44) 
-- CODE:
from math import*
t1=radians(input())
g1=radians(input())
t2=radians(input())
g2=radians(input())
R=6371.01
d=6371.01*arcos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(radians(round(d,2)))

-- EXECUTION TIME:
0.205763
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1017/main.py", line 2, in <module>
    t1=radians(input())
TypeError: a float is required

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 13:51:56) 
-- CODE:
from math import*
t1=radians(input())
g1=radians(input())
t2=radians(input())
g2=radians(input())
d=6371.01*arcos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(radians(round(d,2)))

-- EXECUTION TIME:
0.136325
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1017/main.py", line 2, in <module>
    t1=radians(input())
TypeError: a float is required

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 13:52:13) 
-- CODE:
from math import*
t1=radians(input())
g1=radians(input())
t2=radians(input())
g2=radians(input())
R=6371.01
d=R*arcos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(radians(round(d,2)))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    t1=radians(input())
TypeError: must be real number, not str
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 13:52:14) 
-- CODE:
from math import*
t1=radians(input())
g1=radians(input())
t2=radians(input())
g2=radians(input())
R=6371.01
d=R*arcos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(radians(round(d,2)))

-- EXECUTION TIME:
0.229566
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1017/main.py", line 2, in <module>
    t1=radians(input())
TypeError: a float is required

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 13:52:22) 
-- CODE:
from math import*
t1=radians(input())
g1=radians(input())
t2=radians(input())
g2=radians(input())
R=6371.01
d=R*arccos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(radians(round(d,2)))

-- EXECUTION TIME:
0.185427
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1017/main.py", line 2, in <module>
    t1=radians(input())
TypeError: a float is required

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 13:52:33) 
-- CODE:
from math import*
t1=radians(input())
g1=radians(input())
t2=radians(input())
g2=radians(input())
R=6371.01
d=R*arccos(sen(t1)*sen(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(radians(round(d,2)))

-- EXECUTION TIME:
0.201489
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1017/main.py", line 2, in <module>
    t1=radians(input())
TypeError: a float is required

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 13:52:37) 
-- CODE:
from math import*
t1=radians(input())
g1=radians(input())
t2=radians(input())
g2=radians(input())
R=6371.01
d=R*arccos(sen(t1)*sen(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(radians(round(d,2)))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    t1=radians(input())
TypeError: must be real number, not str
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 13:55:58) 
-- CODE:
from math import*
t1=float(input())
g1=float(input())
t2=float(input())
g2=float(input())
R=6371.01
d=R*arccos(sen(t1)*sen(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print((round(d,2)))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    d=R*arccos(sen(t1)*sen(t2)+cos(t1)*cos(t2)*cos(g1-g2))
NameError: name 'arccos' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 13:56:16) 
-- CODE:
from math import*
t1=float(input())
g1=float(input())
t2=float(input())
g2=float(input())
R=6371.01
d=R*acos(sen(t1)*sen(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print((round(d,2)))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    d=R*acos(sen(t1)*sen(t2)+cos(t1)*cos(t2)*cos(g1-g2))
NameError: name 'sen' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 13:56:54) 
-- CODE:
from math import*
t1=float(input())
g1=float(input())
t2=float(input())
g2=float(input())
R=6371.01
d=R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(int((round(d,2)))

-- ERROR:
File "XXXX", line 9
    
                           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 13:56:58) 
-- CODE:
from math import*
t1=float(input())
g1=float(input())
t2=float(input())
g2=float(input())
R=6371.01
d=R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(int((round(d,2)))
-- ERROR:
File "XXXX", line 9
    
                           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 13:57:07) 
-- CODE:
from math import*
t1=float(input())
g1=float(input())
t2=float(input())
g2=float(input())
R=6371.01
d=R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print((round(d,2))
-- ERROR:
File "XXXX", line 9
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 13:57:16) 
-- CODE:
from math import*
t1=float(input())
g1=float(input())
t2=float(input())
g2=float(input())
R=6371.01
d=R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print((round(d,2)))
-- OUTPUT:
2884.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 13:57:31) 
-- CODE:
from math import*
t1=float(input())
g1=float(input())
t2=float(input())
g2=float(input())
R=6371.01
d=R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print((round(d,2)))
-- EXECUTION TIME:
0.222275
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
2884.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 13:59:43) 
-- CODE:
from math import*
t1=radians(float(input()))
g1=radians(float(input()))
t2=radians(float(input()))
g2=radians(float(input()))
d=6371.01*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print((round(d,2)))
-- OUTPUT:
50.44
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 13:59:44) 
-- CODE:
from math import*
t1=radians(float(input()))
g1=radians(float(input()))
t2=radians(float(input()))
g2=radians(float(input()))
d=6371.01*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print((round(d,2)))
-- OUTPUT:
50.44
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 14:00:03) 
-- CODE:
from math import*
t1=radians(float(input()))
g1=radians(float(input()))
t2=radians(float(input()))
g2=radians(float(input()))
d=6371.01*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(round(d,2))
-- EXECUTION TIME:
0.156088
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
50.44
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
